fixing contrast issues

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Link Colors */
-a:link    { color: lightgreen;}
+a:link    { color: #185f18;}
 a:visited { color: darkgreen;}
 a:hover   { color: green;}
 a:active  { color: lawngreen;}
